--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "cp prisma/schema.mysql.prisma prisma/schema.prisma",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "eslint",
